#4: Fixed control panel footer layout problem

--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -168,7 +168,7 @@ body.dockbar-visible {
 #control-panel {
 	min-height: 100%;
 	height: auto !important;
-	margin: 0 auto -60px;
+	margin: 0 auto -80px;
 }
 
 #control-panel .list-group {
